fixed status icon being clipped in table

--- a/assets/styles/core/icon.less
+++ b/assets/styles/core/icon.less
@@ -10,8 +10,6 @@
 
 .glyph-dot.status, i.glyph-dot {
     color: @status-bg;
-    position: relative;
-    top: 1px;
     &.success {
         color: @success-status-bg;
     }
@@ -25,8 +23,6 @@
     width: 1.4rem;
     border-radius: 0.7rem;
     background: @status-bg;
-    position: relative;
-    top: 1px;
     &.success {
         background: @success-status-bg;
     }
